--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 }
 
 .custom__button {
-  background-color: var(--color-crimson);
+    background-color: var(--color-crimson);
     color: var(--color-black);
     font-family: var(--font-base);
     font-weight: 700;
@@ -65,6 +65,11 @@
     border: none;
     outline: none;
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.custom__button:hover {
+  border-radius: 5px 20px;
 }
 
 .p__cormorant {
@@ -86,6 +91,10 @@
   text-transform: capitalize;
   line-height: 28px;
   font-size: 16px;
+}
+
+.active {
+  color: var(--color-golden);
 }
 
 .headtext__cormorant {
