--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -53,6 +53,34 @@
     display: block;
 }
 
+.app__navbar-search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 320px;
+}
+
+.app__navbar-search input {
+    width: 100%;
+    border: 1px solid var(--color-golden);
+    border-radius: 20px;
+    font-size: 1.5rem;
+    font-family: var(--font-base);
+    color: var(--color-white);
+    
+    margin-right: 2rem;
+    padding: 0.75rem 2rem;
+    background: var(--color-black);
+}
+
+.app__navbar-search input::placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
 .app__navbar-login {
     display: flex;
     justify-content: flex-end;
@@ -136,6 +164,10 @@
 
     .app__navbar-smallscreen {
         display: flex;
+    }
+
+    .app__navbar-search {
+        display: none;
     }
 }
 
